--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,6 +1,6 @@
 version: "3.9"
 services:
-  api:
+  backend:
     build:
       context: .
       dockerfile: Dockerfile
@@ -12,6 +12,10 @@ services:
       DB_NAME: "${DB_NAME}"
     ports:
       - "8080:8080"
+    volumes:
+      - ./.env:/usr/bin/.env
+    env_file:
+      - ./.env
     depends_on:
       - db
     networks:
